--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "tailwindcss": "^1.9.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-rc.1",
+    "vuex-persist": "^3.1.3",
     "web3": "^1.3.0"
   },
   "devDependencies": {
